public/Parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    el
    COS
    int
    cuando
    number
    palabraomitir
    siete
    POINT
    SIN
    cuatro
    segunda
    SEN
    TAN
    cuarta
    ENTERO
    diez
    de
    uno
    tercera
    vale
    EQUAL
    ocho
    cinco
    infinito
    nueve
    tres
    seis
    cero
    la
    limite
    primera
    dominio
    dos
    derivada

Grammar

Rule 0     S' -> declaracion
Rule 1     declaracion -> expression
Rule 2     expression -> expression PLUS expression
Rule 3     expression -> expression MINUS expression
Rule 4     expression -> expression TIMES expression
Rule 5     expression -> expression DIVIDE expression
Rule 6     expression -> expression POW expression
Rule 7     expression -> variable POW expression
Rule 8     expression -> expression MOD expression
Rule 9     expression -> LPAREN expression RPAREN
Rule 10    expression -> LBRACKET expression RBRACKET
Rule 11    expression -> LBLOCK expression RBLOCK
Rule 12    expression -> expression LESS expression
Rule 13    expression -> expression GREATER expression
Rule 14    expression -> expression LESSEQUAL expression
Rule 15    expression -> expression GREATEREQUAL expression
Rule 16    expression -> expression DEQUAL expression
Rule 17    expression -> expression DISTINT expression
Rule 18    expression -> LPAREN expression RPAREN LESS LPAREN expression RPAREN
Rule 19    expression -> LPAREN expression RPAREN GREATER LPAREN expression RPAREN
Rule 20    expression -> LPAREN expression RPAREN LESSEQUAL LPAREN expression RPAREN
Rule 21    expression -> LPAREN expression RPAREN GREATEREQUAL LPAREN expression RPAREN
Rule 22    expression -> LPAREN expression RPAREN DEQUAL LPAREN expression RPAREN
Rule 23    expression -> LPAREN expression RPAREN DISTINT LPAREN expression RPAREN
Rule 24    expression -> term
Rule 25    term -> factor
Rule 26    factor -> NUMBER
Rule 27    factor -> sin LPAREN expression RPAREN
Rule 28    factor -> sen LPAREN expression RPAREN
Rule 29    factor -> cos LPAREN expression RPAREN
Rule 30    factor -> tan LPAREN expression RPAREN
Rule 31    factor -> cot LPAREN expression RPAREN
Rule 32    factor -> sec LPAREN expression RPAREN
Rule 33    factor -> csc LPAREN expression RPAREN
Rule 34    factor -> arcsin LPAREN expression RPAREN
Rule 35    factor -> arcsen LPAREN expression RPAREN
Rule 36    factor -> arccos LPAREN expression RPAREN
Rule 37    factor -> arctan LPAREN expression RPAREN
Rule 38    factor -> sinh LPAREN expression RPAREN
Rule 39    factor -> senh LPAREN expression RPAREN
Rule 40    factor -> cosh LPAREN expression RPAREN
Rule 41    factor -> tanh LPAREN expression RPAREN
Rule 42    factor -> coth LPAREN expression RPAREN
Rule 43    factor -> sech LPAREN expression RPAREN
Rule 44    factor -> csch LPAREN expression RPAREN
Rule 45    factor -> exponencial POW expression
Rule 46    factor -> exponencial POW LPAREN expression RPAREN
Rule 47    factor -> pi TIMES expression
Rule 48    factor -> pi PLUS expression
Rule 49    factor -> pi MINUS expression
Rule 50    factor -> pi DIVIDE expression
Rule 51    factor -> pi POW LPAREN expression RPAREN
Rule 52    factor -> pi POW expression
Rule 53    factor -> sqrt LPAREN expression RPAREN
Rule 54    factor -> logaritmoNatural LPAREN expression RPAREN
Rule 55    factor -> LPAREN expression RPAREN
Rule 56    expression -> NUMBER
Rule 57    expression -> variable
Rule 58    empty -> <empty>

Terminals, with rules where they appear

COS                  : 
DEQUAL               : 16 22
DISTINT              : 17 23
DIVIDE               : 5 50
ENTERO               : 
EQUAL                : 
GREATER              : 13 19
GREATEREQUAL         : 15 21
LBLOCK               : 11
LBRACKET             : 10
LESS                 : 12 18
LESSEQUAL            : 14 20
LPAREN               : 9 18 18 19 19 20 20 21 21 22 22 23 23 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 46 51 53 54 55
MINUS                : 3 49
MOD                  : 8
NUMBER               : 26 56
PLUS                 : 2 48
POINT                : 
POW                  : 6 7 45 46 51 52
RBLOCK               : 11
RBRACKET             : 10
RPAREN               : 9 18 18 19 19 20 20 21 21 22 22 23 23 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 46 51 53 54 55
SEN                  : 
SIN                  : 
TAN                  : 
TIMES                : 4 47
arccos               : 36
arcsen               : 35
arcsin               : 34
arctan               : 37
cero                 : 
cinco                : 
cos                  : 29
cosh                 : 40
cot                  : 31
coth                 : 42
csc                  : 33
csch                 : 44
cuando               : 
cuarta               : 
cuatro               : 
de                   : 
derivada             : 
diez                 : 
dominio              : 
dos                  : 
el                   : 
error                : 
exponencial          : 45 46
infinito             : 
int                  : 
la                   : 
limite               : 
logaritmoNatural     : 54
nueve                : 
number               : 
ocho                 : 
palabraomitir        : 
pi                   : 47 48 49 50 51 52
primera              : 
sec                  : 32
sech                 : 43
segunda              : 
seis                 : 
sen                  : 28
senh                 : 39
siete                : 
sin                  : 27
sinh                 : 38
sqrt                 : 53
tan                  : 30
tanh                 : 41
tercera              : 
tres                 : 
uno                  : 
vale                 : 
variable             : 7 57

Nonterminals, with rules where they appear

declaracion          : 0
empty                : 
expression           : 1 2 2 3 3 4 4 5 5 6 6 7 8 8 9 10 11 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55
factor               : 25
term                 : 24

Parsing method: LALR

state 0

    (0) S' -> . declaracion
    (1) declaracion -> . expression
    (2) expression -> . expression PLUS expression
    (3) expression -> . expression MINUS expression
    (4) expression -> . expression TIMES expression
    (5) expression -> . expression DIVIDE expression
    (6) expression -> . expression POW expression
    (7) expression -> . variable POW expression
    (8) expression -> . expression MOD expression
    (9) expression -> . LPAREN expression RPAREN
    (10) expression -> . LBRACKET expression RBRACKET
    (11) expression -> . LBLOCK expression RBLOCK
    (12) expression -> . expression LESS expression
    (13) expression -> . expression GREATER expression
    (14) expression -> . expression LESSEQUAL expression
    (15) expression -> . expression GREATEREQUAL expression
    (16) expression -> . expression DEQUAL expression
    (17) expression -> . expression DISTINT expression
    (18) expression -> . LPAREN expression RPAREN LESS LPAREN expression RPAREN
    (19) expression -> . LPAREN expression RPAREN GREATER LPAREN expression RPAREN
    (20) expression -> . LPAREN expression RPAREN LESSEQUAL LPAREN expression RPAREN
    (21) expression -> . LPAREN expression RPAREN GREATEREQUAL LPAREN expression RPAREN
    (22) expression -> . LPAREN expression RPAREN DEQUAL LPAREN expression RPAREN
    (23) expression -> . LPAREN expression RPAREN DISTINT LPAREN expression RPAREN
    (24) expression -> . term
    (56) expression -> . NUMBER
    (57) expression -> . variable
    (25) term -> . factor
    (26) factor -> . NUMBER
    (27) factor -> . sin LPAREN expression RPAREN
    (28) factor -> . sen LPAREN expression RPAREN
    (29) factor -> . cos LPAREN expression RPAREN
    (30) factor -> . tan LPAREN expression RPAREN
    (31) factor -> . cot LPAREN expression RPAREN
    (32) factor -> . sec LPAREN expression RPAREN
    (33) factor -> . csc LPAREN expression RPAREN
    (34) factor -> . arcsin LPAREN expression RPAREN
    (35) factor -> . arcsen LPAREN expression RPAREN
    (36) factor -> . arccos LPAREN expression RPAREN
    (37) factor -> . arctan LPAREN expression RPAREN
    (38) factor -> . sinh LPAREN expression RPAREN
    (39) factor -> . senh LPAREN expression RPAREN
    (40) factor -> . cosh LPAREN expression RPAREN
    (41) factor -> . tanh LPAREN expression RPAREN
    (42) factor -> . coth LPAREN expression RPAREN
    (43) factor -> . sech LPAREN expression RPAREN
    (44) factor -> . csch LPAREN expression RPAREN
    (45) factor -> . exponencial POW expression
    (46) factor -> . exponencial POW LPAREN expression RPAREN
    (47) factor -> . pi TIMES expression
    (48) factor -> . pi PLUS expression
    (49) factor -> . pi MINUS expression
    (50) factor -> . pi DIVIDE expression
    (51) factor -> . pi POW LPAREN expression RPAREN
    (52) factor -> . pi POW expression
    (53) factor -> . sqrt LPAREN expression RPAREN
    (54) factor -> . logaritmoNatural LPAREN expression RPAREN
    (55) factor -> . LPAREN expression RPAREN

    variable        shift and go to state 5
    LPAREN          shift and go to state 22
    LBRACKET        shift and go to state 4
    LBLOCK          shift and go to state 23
    NUMBER          shift and go to state 2
    sin             shift and go to state 16
    sen             shift and go to state 8
    cos             shift and go to state 21
    tan             shift and go to state 9
    cot             shift and go to state 25
    sec             shift and go to state 6
    csc             shift and go to state 12
    arcsin          shift and go to state 19
    arcsen          shift and go to state 11
    arccos          shift and go to state 20
    arctan          shift and go to state 13
    sinh            shift and go to state 1
    senh            shift and go to state 18
    cosh            shift and go to state 3
    tanh            shift and go to state 28
    coth            shift and go to state 24
    sech            shift and go to state 29
    csch            shift and go to state 10
    exponencial     shift and go to state 15
    pi              shift and go to state 27
    sqrt            shift and go to state 7
    logaritmoNatural shift and go to state 17

    term                           shift and go to state 26
    expression                     shift and go to state 30
    declaracion                    shift and go to state 31
    factor                         shift and go to state 14

state 1

    (38) factor -> sinh . LPAREN expression RPAREN

    LPAREN          shift and go to state 32


state 2

    (56) expression -> NUMBER .
    (26) factor -> NUMBER .

  ! reduce/reduce conflict for RPAREN resolved using rule 26 (factor -> NUMBER .)
  ! reduce/reduce conflict for PLUS resolved using rule 26 (factor -> NUMBER .)
  ! reduce/reduce conflict for MINUS resolved using rule 26 (factor -> NUMBER .)
  ! reduce/reduce conflict for TIMES resolved using rule 26 (factor -> NUMBER .)
  ! reduce/reduce conflict for DIVIDE resolved using rule 26 (factor -> NUMBER .)
  ! reduce/reduce conflict for POW resolved using rule 26 (factor -> NUMBER .)
  ! reduce/reduce conflict for MOD resolved using rule 26 (factor -> NUMBER .)
  ! reduce/reduce conflict for LESS resolved using rule 26 (factor -> NUMBER .)
  ! reduce/reduce conflict for GREATER resolved using rule 26 (factor -> NUMBER .)
  ! reduce/reduce conflict for LESSEQUAL resolved using rule 26 (factor -> NUMBER .)
  ! reduce/reduce conflict for GREATEREQUAL resolved using rule 26 (factor -> NUMBER .)
  ! reduce/reduce conflict for DEQUAL resolved using rule 26 (factor -> NUMBER .)
  ! reduce/reduce conflict for DISTINT resolved using rule 26 (factor -> NUMBER .)
  ! reduce/reduce conflict for RBRACKET resolved using rule 26 (factor -> NUMBER .)
  ! reduce/reduce conflict for $end resolved using rule 26 (factor -> NUMBER .)
  ! reduce/reduce conflict for RBLOCK resolved using rule 26 (factor -> NUMBER .)
    RPAREN          reduce using rule 26 (factor -> NUMBER .)
    PLUS            reduce using rule 26 (factor -> NUMBER .)
    MINUS           reduce using rule 26 (factor -> NUMBER .)
    TIMES           reduce using rule 26 (factor -> NUMBER .)
    DIVIDE          reduce using rule 26 (factor -> NUMBER .)
    POW             reduce using rule 26 (factor -> NUMBER .)
    MOD             reduce using rule 26 (factor -> NUMBER .)
    LESS            reduce using rule 26 (factor -> NUMBER .)
    GREATER         reduce using rule 26 (factor -> NUMBER .)
    LESSEQUAL       reduce using rule 26 (factor -> NUMBER .)
    GREATEREQUAL    reduce using rule 26 (factor -> NUMBER .)
    DEQUAL          reduce using rule 26 (factor -> NUMBER .)
    DISTINT         reduce using rule 26 (factor -> NUMBER .)
    RBRACKET        reduce using rule 26 (factor -> NUMBER .)
    $end            reduce using rule 26 (factor -> NUMBER .)
    RBLOCK          reduce using rule 26 (factor -> NUMBER .)

  ! RPAREN          [ reduce using rule 56 (expression -> NUMBER .) ]
  ! PLUS            [ reduce using rule 56 (expression -> NUMBER .) ]
  ! MINUS           [ reduce using rule 56 (expression -> NUMBER .) ]
  ! TIMES           [ reduce using rule 56 (expression -> NUMBER .) ]
  ! DIVIDE          [ reduce using rule 56 (expression -> NUMBER .) ]
  ! POW             [ reduce using rule 56 (expression -> NUMBER .) ]
  ! MOD             [ reduce using rule 56 (expression -> NUMBER .) ]
  ! LESS            [ reduce using rule 56 (expression -> NUMBER .) ]
  ! GREATER         [ reduce using rule 56 (expression -> NUMBER .) ]
  ! LESSEQUAL       [ reduce using rule 56 (expression -> NUMBER .) ]
  ! GREATEREQUAL    [ reduce using rule 56 (expression -> NUMBER .) ]
  ! DEQUAL          [ reduce using rule 56 (expression -> NUMBER .) ]
  ! DISTINT         [ reduce using rule 56 (expression -> NUMBER .) ]
  ! $end            [ reduce using rule 56 (expression -> NUMBER .) ]
  ! RBRACKET        [ reduce using rule 56 (expression -> NUMBER .) ]
  ! RBLOCK          [ reduce using rule 56 (expression -> NUMBER .) ]


state 3

    (40) factor -> cosh . LPAREN expression RPAREN

    LPAREN          shift and go to state 33


state 4

    (10) expression -> LBRACKET . expression RBRACKET
    (2) expression -> . expression PLUS expression
    (3) expression -> . expression MINUS expression
    (4) expression -> . expression TIMES expression
    (5) expression -> . expression DIVIDE expression
    (6) expression -> . expression POW expression
    (7) expression -> . variable POW expression
    (8) expression -> . expression MOD expression
    (9) expression -> . LPAREN expression RPAREN
    (10) expression -> . LBRACKET expression RBRACKET
    (11) expression -> . LBLOCK expression RBLOCK
    (12) expression -> . expression LESS expression
    (13) expression -> . expression GREATER expression
    (14) expression -> . expression LESSEQUAL expression
    (15) expression -> . expression GREATEREQUAL expression
    (16) expression -> . expression DEQUAL expression
    (17) expression -> . expression DISTINT expression
    (18) expression -> . LPAREN expression RPAREN LESS LPAREN expression RPAREN
    (19) expression -> . LPAREN expression RPAREN GREATER LPAREN expression RPAREN
    (20) expression -> . LPAREN expression RPAREN LESSEQUAL LPAREN expression RPAREN
    (21) expression -> . LPAREN expression RPAREN GREATEREQUAL LPAREN expression RPAREN
    (22) expression -> . LPAREN expression RPAREN DEQUAL LPAREN expression RPAREN
    (23) expression -> . LPAREN expression RPAREN DISTINT LPAREN expression RPAREN
    (24) expression -> . term
    (56) expression -> . NUMBER
    (57) expression -> . variable
    (25) term -> . factor
    (26) factor -> . NUMBER
    (27) factor -> . sin LPAREN expression RPAREN
    (28) factor -> . sen LPAREN expression RPAREN
    (29) factor -> . cos LPAREN expression RPAREN
    (30) factor -> . tan LPAREN expression RPAREN
    (31) factor -> . cot LPAREN expression RPAREN
    (32) factor -> . sec LPAREN expression RPAREN
    (33) factor -> . csc LPAREN expression RPAREN
    (34) factor -> . arcsin LPAREN expression RPAREN
    (35) factor -> . arcsen LPAREN expression RPAREN
    (36) factor -> . arccos LPAREN expression RPAREN
    (37) factor -> . arctan LPAREN expression RPAREN
    (38) factor -> . sinh LPAREN expression RPAREN
    (39) factor -> . senh LPAREN expression RPAREN
    (40) factor -> . cosh LPAREN expression RPAREN
    (41) factor -> . tanh LPAREN expression RPAREN
    (42) factor -> . coth LPAREN expression RPAREN
    (43) factor -> . sech LPAREN expression RPAREN
    (44) factor -> . csch LPAREN expression RPAREN
    (45) factor -> . exponencial POW expression
    (46) factor -> . exponencial POW LPAREN expression RPAREN
    (47) factor -> . pi TIMES expression
    (48) factor -> . pi PLUS expression
    (49) factor -> . pi MINUS expression
    (50) factor -> . pi DIVIDE expression
    (51) factor -> . pi POW LPAREN expression RPAREN
    (52) factor -> . pi POW expression
    (53) factor -> . sqrt LPAREN expression RPAREN
    (54) factor -> . logaritmoNatural LPAREN expression RPAREN
    (55) factor -> . LPAREN expression RPAREN

    variable        shift and go to state 5
    LPAREN          shift and go to state 22
    LBRACKET        shift and go to state 4
    LBLOCK          shift and go to state 23
    NUMBER          shift and go to state 2
    sin             shift and go to state 16
    sen             shift and go to state 8
    cos             shift and go to state 21
    tan             shift and go to state 9
    cot             shift and go to state 25
    sec             shift and go to state 6
    csc             shift and go to state 12
    arcsin          shift and go to state 19
    arcsen          shift and go to state 11
    arccos          shift and go to state 20
    arctan          shift and go to state 13
    sinh            shift and go to state 1
    senh            shift and go to state 18
    cosh            shift and go to state 3
    tanh            shift and go to state 28
    coth            shift and go to state 24
    sech            shift and go to state 29
    csch            shift and go to state 10
    exponencial     shift and go to state 15
    pi              shift and go to state 27
    sqrt            shift and go to state 7
    logaritmoNatural shift and go to state 17

    term                           shift and go to state 26
    expression                     shift and go to state 34
    factor                         shift and go to state 14

state 5

    (7) expression -> variable . POW expression
    (57) expression -> variable .

  ! shift/reduce conflict for POW resolved as shift
    POW             shift and go to state 35
    RPAREN          reduce using rule 57 (expression -> variable .)
    PLUS            reduce using rule 57 (expression -> variable .)
    MINUS           reduce using rule 57 (expression -> variable .)
    TIMES           reduce using rule 57 (expression -> variable .)
    DIVIDE          reduce using rule 57 (expression -> variable .)
    MOD             reduce using rule 57 (expression -> variable .)
    LESS            reduce using rule 57 (expression -> variable .)
    GREATER         reduce using rule 57 (expression -> variable .)
    LESSEQUAL       reduce using rule 57 (expression -> variable .)
    GREATEREQUAL    reduce using rule 57 (expression -> variable .)
    DEQUAL          reduce using rule 57 (expression -> variable .)
    DISTINT         reduce using rule 57 (expression -> variable .)
    $end            reduce using rule 57 (expression -> variable .)
    RBRACKET        reduce using rule 57 (expression -> variable .)
    RBLOCK          reduce using rule 57 (expression -> variable .)

  ! POW             [ reduce using rule 57 (expression -> variable .) ]


state 6

    (32) factor -> sec . LPAREN expression RPAREN

    LPAREN          shift and go to state 36


state 7

    (53) factor -> sqrt . LPAREN expression RPAREN

    LPAREN          shift and go to state 37


state 8

    (28) factor -> sen . LPAREN expression RPAREN

    LPAREN          shift and go to state 38


state 9

    (30) factor -> tan . LPAREN expression RPAREN

    LPAREN          shift and go to state 39


state 10

    (44) factor -> csch . LPAREN expression RPAREN

    LPAREN          shift and go to state 40


state 11

    (35) factor -> arcsen . LPAREN expression RPAREN

    LPAREN          shift and go to state 41


state 12

    (33) factor -> csc . LPAREN expression RPAREN

    LPAREN          shift and go to state 42


state 13

    (37) factor -> arctan . LPAREN expression RPAREN

    LPAREN          shift and go to state 43


state 14

    (25) term -> factor .

    RPAREN          reduce using rule 25 (term -> factor .)
    PLUS            reduce using rule 25 (term -> factor .)
    MINUS           reduce using rule 25 (term -> factor .)
    TIMES           reduce using rule 25 (term -> factor .)
    DIVIDE          reduce using rule 25 (term -> factor .)
    POW             reduce using rule 25 (term -> factor .)
    MOD             reduce using rule 25 (term -> factor .)
    LESS            reduce using rule 25 (term -> factor .)
    GREATER         reduce using rule 25 (term -> factor .)
    LESSEQUAL       reduce using rule 25 (term -> factor .)
    GREATEREQUAL    reduce using rule 25 (term -> factor .)
    DEQUAL          reduce using rule 25 (term -> factor .)
    DISTINT         reduce using rule 25 (term -> factor .)
    RBLOCK          reduce using rule 25 (term -> factor .)
    $end            reduce using rule 25 (term -> factor .)
    RBRACKET        reduce using rule 25 (term -> factor .)


state 15

    (45) factor -> exponencial . POW expression
    (46) factor -> exponencial . POW LPAREN expression RPAREN

    POW             shift and go to state 44


state 16

    (27) factor -> sin . LPAREN expression RPAREN

    LPAREN          shift and go to state 45


state 17

    (54) factor -> logaritmoNatural . LPAREN expression RPAREN

    LPAREN          shift and go to state 46


state 18

    (39) factor -> senh . LPAREN expression RPAREN

    LPAREN          shift and go to state 47


state 19

    (34) factor -> arcsin . LPAREN expression RPAREN

    LPAREN          shift and go to state 48


state 20

    (36) factor -> arccos . LPAREN expression RPAREN

    LPAREN          shift and go to state 49


state 21

    (29) factor -> cos . LPAREN expression RPAREN

    LPAREN          shift and go to state 50


state 22
